# Federated_Learning_System_TFG

./: .gitignore  README.md  pyproject.toml  schema.sql
src/: .sfr.sh.swp  sfr.sh  str.sh
src/codigla_data_files/: create_train_test.py
workdir/src/: model_training_syft.py
workdir/src/codigla_data_files/: __init__.py
workdir/src/modules/: adversarial_attacks.py  backdoor_attack.py  backdoor_defense.py  backdoor_syft.py  create_dataset.py  data_preprocessing.py  database_access.py  db_1_1.py  federate_codigla.sql  membership_inference.py  migration.sql  model_training_syft.py  new_experiment.py  run_adversarial_experiment.py  run_backdoor_experiment.py  run_backdoor_pipeline.py  run_mia_experiment.py  run_mia_pipeline.py  run_pipeline.py  run_pipeline_1.py  syft_glaucoma.py  train_resnet.py  trial_policy.py
workdir/src/notebooks/: adversarial_attacks.py  client.ipynb  client_1.ipynb  creacion_directorios_fuentes_de_datos.ipynb  datos_preparacion.ipynb  owner.ipynb  owner_1.ipynb  plot_generation.py  poisoning_experiment.py  prueba_pysyft.ipynb  syft_glaucoma.py  train_resnet.ipynb  train_resnet_final.py  update_folder_in_drive.ipynb
